# SpectrareFX

./: .gitmodules  CMakeLists.txt
shaders/: shader.frag  shader.vert
src/: FileHelper.cpp  FileHelper.h  main.cpp
src/Graphics/: App.cpp  App.h  BasicRenderSystem.cpp  BasicRenderSystem.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DebugLayer.cpp  DebugLayers.h  Descriptors.cpp  Descriptors.h  Device.cpp  Device.h  FrameInfo.h  Graphics.cpp  Graphics.h  ImageBuffer.cpp  ImageBuffer.h  KeyboardMovementController.cpp  KeyboardMovementController.h  Model.cpp  Model.h  Object.cpp  Object.h  Pipeline.cpp  Pipeline.h  QueueFamilyIndices.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  SwapChainSupportDetails.h  SyncObjects.h  Vh.cpp  Vh.h  Window.cpp  Window.h  (+3 more)
src/Graphics/GUI/: DemoGuiLayer.cpp  DemoGuiLayer.h  GuiLayer.h  HelloImGuiLayer.cpp  HelloImGuiLayer.h
src/Graphics/systems/: BasicRenderSystem.cpp  BasicRenderSystem.h  ImGuiRenderSystem.h  ImGuiRenderSysten.cpp
src/Logger/: Logger.cpp  Logger.h
